# learn-wgpu

./: CLAUDE.md  Cargo.toml  shader.wgsl  sky.wgsl  wireframe.wgsl
src/: camera.rs  cubemap.rs  equirectangular.wgsl  lib.rs  light.rs  light.wgsl  model.rs  render_pipeline.rs  resources.rs  state.rs  texture.rs
