[package]
name = "rust_terrain_codex"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
anyhow = "1.0.99"
bytemuck = { version = "1.23.2", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
wgpu = "26.0.1"
winit = "0.30.12"
tobj = { version = "3.2", default-features = false, features = ["async"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
